# ASIM

./: .gitignore  Makefile  README.md  in.ac  in.out  pyproject.toml
asimc/: __main__.py  cache.py  funcs.py  log.py  parser.py  translator.py
asimc/templates/cpp/: asim.hpp  main.cpp
asimr/: __main__.py  constant.py  core.py  device.py
asimr/instruction/: instruction.py  syscall.py  utils.py
docs/: mkdocs.yml
docs/docs/: grammar.md  index.md  isa.md
test/: test_device.py  test_pack.py  test_parser.py
